// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  class="sc-AxjAm kEgiZE"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot with badge 1`] = `
<div
  class="sc-AxjAm fZIJFY"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;
